<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project Name : TugasSuperheroAPI_10121050
  ~ Created by Rio
  ~ Copyright (c) 2024. All rights reserverd.
  ~ Last modified 7/14/24, 5:01 PM
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c5d0e2"
    tools:context=".DetailSuperheroActivity">

    <ImageView
        android:id="@+id/ivSuperhero"
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="490dp"
        app:cardBackgroundColor="#FFC0CB"
        app:cardCornerRadius="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuperheroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="SuperHero Name" />

            <TextView
                android:id="@+id/tvSuperheroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="italic"
                tools:text="SuperheroRealName" />

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/eater"
                android:gravity="center_horizontal"
                android:textSize="11sp"
                tools:text="Publisher" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:gravity="bottom"
                android:orientation="horizontal">


                <View
                    android:id="@+id/viewIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_intelligence" />

                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_strength" />

                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_speed" />

                <View
                    android:id="@+id/viewDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_durability" />

                <View
                    android:id="@+id/viewPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_power" />

                <View
                    android:id="@+id/viewCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_combat" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:gravity="bottom"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/bebas"
                    android:text="@string/superhero_intelligence"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/bebas"
                    android:text="@string/superhero_strength"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/bebas"
                    android:text="@string/superhero_speed"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/bebas"
                    android:text="@string/superhero_durability"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/bebas"
                    android:text="@string/superhero_power"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/bebas"
                    android:text="@string/superhero_combat"
                    android:textSize="10sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>